--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>  
+    <p>Hello world</p>
     <p>Lorem ipsum dolor sit amet.</p>
   </body>
 </html>
